2004-10-15  Leena Gunda  <leena.gunda@wipro.com>

	* applet.c: (help_cb): Fix crash when there is error to display 
	help. Fixes bug #147718.

2004-08-24  Davyd Madeley  <davyd@madeley.id.au>

	* applet.c: Fix spelling mistake. s/Extenstion/Extension/
	Closes #150889.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec.
	* applet.c: (help_cb): Use gnome_help_*

2004-06-18  Arvind Samptur  <arvind.samptur@wipro.com>

	* applet.h: Add AccessxStatusErrorType enum.
	* applet.c: (accessx_status_applet_realize):
	(accessx_status_applet_xkb_select): Set the error flag
	if XKB support is not there.
	(popup_error_dialog): pop up the appropriate error message
	based on the error flag.
	Fixes bug #140281

2004-05-20  Padraig O'Briain <padraig.obriain@sun.com>

	* applet.c:
	(accessx_status_applet_layout_box): Check that sapplet->box is
	realized instead of sapplet->applet and also check that 
	sapplet->initialized is set before calling 
	accessx_status_applet_update.
	(accessx_status_applet_realize): Call accessx_status_applet_reset
	in an idle handler.
	(accessx_status_applet_fill): If sapplet->box was realised call
	accessx_status_applet_initialize instead of connecting to "realize"
	signal. Call accessx_status_applet_reset if sapplet->box was realized
	instead of always calling it in a timeout handler.

	Fixes bug #137585.
	
2004-03-04  Bill Haneman <billh@gnome.org>

	* applet.c:
	(accessx_status_applet_init_modifiers): Don't include
	ISO_Group_Shift and ISO_Group_Latch/Lock in alt_gr_mask;
	if present these probably deserve their own icon (TBD).
	(button_press_callback): Invoke on button-press, not double-click.
	Fix for bug #124018.
	
2004-02-29  Dennis Smit  <ds@nerds-incorporated.org>

	* applet.c (accessx_status_applet_background):
	Removed bogus return.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* applet.c (accessx_status_applet_background):
	Added function to listen to panel background