@@ -9,19 +9,19 @@
     </maintainer>
 <!--
     <title>
-      Volume Control Applet Manual V2.3
+      Keyboard Accessibility Status Applet Manual V2.3
     </title>
 -->
     <title>
-      Volume Control
+      Keyboard Accessibility Status
     </title>    
     <date>
       2003-03-10
     </date>
     <version identifier="2.3" date="2003-03-10" description="Updated for GNOME 2.2, program version 2.1.3"/>
-    <subject category="GNOME|Applets|Multimedia"/>
+    <subject category="GNOME|Applets|Utility"/>
     <description>
-      User manual for the Volume Control applet. 
+      User manual for the Keyboard Accessibility Status applet. 
     </description>
     <type>
       user's guide
@@ -29,7 +29,7 @@
     <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
     <identifier url="accessx-status.xml"/>
     <language code="C"/>
-    <relation seriesid="df109296-40e7-11d6-935f-beaae1cfe4f8"/>
+    <relation seriesid="df109296-40e7-11d6-935f-beaae1cfe4f9"/>
     <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
   </resource>        
 </omf>
