@@ -1,3 +1,9 @@
+2005-01-13  Davyd Madeley  <davyd@madeley.id.au>
+
+	* applet.c: Fix file location for pixmaps.
+	* docs/C/accessx-status-C.omf: Use correct OMF (not one from mixer).
+	  Closes 163782. Patch from Matt Keenan <matt.keenan@sun.com>.
+
 2004-10-15  Leena Gunda  <leena.gunda@wipro.com>
 
 	* applet.c: (help_cb): Fix crash when there is error to display 
